trunk/Archive2/e2/eecc675860aa9d/output
main.cpp: In function 'int main()':
main.cpp:28:22: error: call of overloaded 'purr(implicit)' is ambiguous
     purr( implicit() );
                      ^
main.cpp:28:22: note: candidates are:
main.cpp:5:6: note: void purr(char)
 void purr ( char a ) {
      ^
main.cpp:9:6: note: void purr(const char*)
 void purr ( const char* a ) {
      ^
